# internal/models/jwt.go
@@ -1,0 +1,13 @@
+package models
+
+import "github.com/golang-jwt/jwt/v5"
+
+type Credentials struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+type Claims struct {
+	Username string `json:"username"`
+	jwt.RegisteredClaims
+}
